Added CardView for fragment_auth

--- a/app/src/main/res/layout-land/fragment_auth.xml
+++ b/app/src/main/res/layout-land/fragment_auth.xml
@@ -68,9 +68,11 @@
             app:layout_constraintTop_toBottomOf="@id/cl_language"
             app:layout_constraintVertical_bias="0" />
 
+        <!-- CONTENT_PADDING: -19DP -> TO FIX CORNER_OVERLAP ISSUE -->
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cv"
             style="@style/Theme.WarrantyRoster.AuthCardView"
+            app:contentPadding="@dimen/padding_negative14dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_header"
