--- a/app/src/main/res/drawable/shape_rounded_linked_accounts_status_disconnect.xml
+++ b/app/src/main/res/drawable/shape_rounded_linked_accounts_status_disconnect.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
-    android:tint="@color/green20">
+    android:tint="@color/red20">
 
     <corners android:radius="@dimen/radius_4dp" />
 
