--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -25,8 +25,9 @@
                 android:id="@+id/tv_description"
                 android:layout_width="@dimen/width_0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/margin_24dp"
+                android:layout_marginStart="@dimen/margin_24dp"
                 android:layout_marginTop="@dimen/margin_32dp"
+                android:layout_marginEnd="@dimen/margin_18dp"
                 android:fontFamily="@font/localized_extra_bold"
                 android:gravity="start|center_vertical"
                 android:text="@string/login_text_description"
