--- a/app/src/main/res/layout-land/fragment_forgot_pw.xml
+++ b/app/src/main/res/layout-land/fragment_forgot_pw.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:orientation="vertical"
-    android:overScrollMode="never"
-    android:paddingTop="@dimen/padding_4dp"
+    android:overScrollMode="ifContentScrolls"
     android:scrollbars="none">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,8 +16,8 @@
             android:id="@+id/tv_description"
             android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_44dp"
-            android:layout_marginTop="@dimen/margin_20dp"
+            android:layout_marginHorizontal="@dimen/margin_24dp"
+            android:layout_marginTop="@dimen/margin_32dp"
             android:fontFamily="@font/localized_extra_bold"
             android:gravity="start|center_vertical"
             android:text="@string/forgot_pw_text_description"
@@ -36,8 +35,8 @@
             android:id="@+id/tv_title_email"
             android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_52dp"
-            android:layout_marginTop="@dimen/margin_24dp"
+            android:layout_marginHorizontal="@dimen/margin_8dp"
+            android:layout_marginTop="@dimen/margin_32dp"
             android:fontFamily="@font/localized_bold"
             android:gravity="start|center_vertical"
             android:labelFor="@+id/ti_layout_email"
@@ -47,8 +46,8 @@
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_14sp"
             app:layout_constraintBottom_toTopOf="@+id/ti_layout_email"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/ti_layout_email"
+            app:layout_constraintStart_toStartOf="@id/ti_layout_email"
             app:layout_constraintTop_toBottomOf="@+id/tv_description" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -56,7 +55,7 @@
             style="@style/Theme.WarrantyRoster.TextInputLayout"
             android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_44dp"
+            android:layout_marginHorizontal="@dimen/margin_24dp"
             android:layout_marginTop="@dimen/margin_4dp"
             app:layout_constraintBottom_toTopOf="@+id/btn_send"
             app:layout_constraintEnd_toEndOf="parent"
@@ -78,15 +77,17 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- MARGIN_BOTTOM: 19 + 5 = 24DP -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_send"
             style="@style/Theme.WarrantyRoster.Button"
             android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_44dp"
+            android:layout_marginHorizontal="@dimen/margin_24dp"
             android:layout_marginTop="@dimen/margin_24dp"
+            android:layout_marginBottom="@dimen/margin_19dp"
             android:text="@string/forgot_pw_btn_send"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/btn_return"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ti_layout_email" />
@@ -102,23 +103,23 @@
             app:layout_constraintStart_toStartOf="@+id/btn_send"
             app:layout_constraintTop_toTopOf="@+id/btn_send" />
 
+        <!-- MARGIN_HORIZONTAL: 19 + 5 = 24DP -->
+        <!-- MARGIN_BOTTOM: 7 + 5 = 12DP -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_return"
             style="@style/Theme.WarrantyRoster.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_4dp"
-            android:layout_marginVertical="@dimen/margin_19dp"
+            android:layout_marginHorizontal="@dimen/margin_19dp"
+            android:layout_marginBottom="@dimen/margin_7dp"
             android:gravity="center"
             android:text="@string/forgot_pw_btn_return"
             android:textAlignment="gravity"
+            app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_send"
-            app:layout_constraintVertical_bias="1"
-            app:layout_constraintVertical_chainStyle="spread" />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
